--- a/src/components/userCard/userCard.module.css
+++ b/src/components/userCard/userCard.module.css
@@ -1,9 +1,69 @@
 .profile {
-    background-color: red;
+    background-color: rgba(111, 76, 122, 0.357);
     border-radius: 7px;
-    box-shadow: 5px 5px 19px -5px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 5px 5px 19px -5px rgba(0,0,0,0.5);
-    -moz-box-shadow: 5px 5px 19px -5px rgba(0,0,0,0.5);
     text-align: center;
     max-width: 400px;
+    margin: 0 auto;
 }
+.description {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    padding-bottom: 35px;
+}
+
+.avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 30%;
+    margin-bottom: 24px;
+    background-color: #fff;
+  }
+
+  .username {
+    font-size: 32px;
+    font-weight: bold;
+  }
+  
+  .tag {
+    font-size: 14px;
+    color: #131212;
+  }
+  
+  .location {
+    color: #131212;
+    font-size: 14px;
+  }
+  .stats {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.stats li {
+    padding: 20px 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.stats li:last-child {
+    border-right: none;
+}
+  
+  .quantity {
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+  
+  .label {
+    font-size: 12px;
+    color: #777;
+  }
