--- a/src/components/userCard/userCard.module.css
+++ b/src/components/userCard/userCard.module.css
@@ -3,7 +3,8 @@
     border-radius: 7px;
     text-align: center;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 50px auto;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 .description {
     display: flex;
