--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -22,6 +22,7 @@
     flex-direction: column;
     align-items: center;
     padding: 10px 25px;
+    font-weight: 500;
   }
   
   .stat-list .item:nth-child(1) {
